--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <img src="foto.jpg" alt="Nosotros">
 
     <div class="letter">
-      Te amo muchísimo y soy feliz todos los días desde que la conocí.
+      si viera 1 millon de estrellas fugaces te pediria como deseo 1 millon de veces
     </div>
 
     <!-- CAMBIA cancion.mp3 por tu canción -->
@@ -125,3 +125,4 @@
 
 </body>
 </html>
+
